# thrippy-api

./: .gitignore  Makefile  README.md  go.mod  go.sum
go/: go.sum
go/thrippy/v1/: credentials.pb.go  oauth.pb.go  thrippy.pb.go  thrippy_grpc.pb.go
proto/thrippy/v1/: credentials.proto  oauth.proto  thrippy.proto
py/: pyproject.toml
py/src/thrippy/v1/: credentials_pb2.pyi  oauth_pb2.pyi  thrippy_pb2.pyi  thrippy_pb2_grpc.py
python/: Makefile  README.md  pyproject.toml
python/src/thrippy/v1/: credentials_pb2.py  credentials_pb2_grpc.py  oauth_pb2.py  oauth_pb2.pyi  oauth_pb2_grpc.py  thrippy_pb2.py  thrippy_pb2_grpc.py
thrippy/v1/: credentials.pb.go  oauth.pb.go  thrippy.pb.go  thrippy_grpc.pb.go
thrippypb/v1/: oauth.pb.go  thrippy.pb.go
