[project]
name = "thrippy"
version = "1.0.0"
description = "Generated code for Thrippy gRPC clients"
readme = "README.md"
authors = [
    { name = "Daniel Abraham", email = "aeroquix@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.75.1",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "grpcio-tools>=1.75.1",
]
